Mon May 14 23:54:18 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: Browser fixes.  Do smarter sizing of the browser
	  window, align logo to the right to make it look nicer, fix warning
	  when logo image missing, exclude root from browser if he wouldn't
	  be allowed in anyway, fix reading of users, rewind the pw entry

	* config/gdm.conf.in: change default locale from english to en_US,
	  since not everything can properly dealias these things
	  unfortunately

Mon May 14 22:42:51 2001  George Lebl <jirka@5z.com>

	* daemon/slave.c:  setup the environment better for the greeter
	  and setup the actual HOME if it exists etc... This makes it nicer
	  for BackgroundProgram's.  so if say the user wants to run a
	  gnome program (which require a writable home dir) he can just
	  create /home/gdm (or whatever it's in /etc/passwd)

Mon May 14 22:20:09 2001  George Lebl <jirka@5z.com>

	* docs/C/Makefile.am: install the index.html file correctly on make
	  install.  For those weirdos like me that run out of CVS

Mon May 14 21:52:53 2001  George Lebl <jirka@5z.com>

	* docs/C/gdm.sgml:  Add proper copyrights/authors for me and Tim Jensen
	  and update the configuration section with all the new keys.

	* config/gdm.conf.in:  Run configurator with --disable-sound and
	  --disable-crash-dialog

Mon May 14 20:53:16 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.[ch], gui/gdmconfig.(c|h|glade), gui/gdmlogin.c:  Add a
	  boolean flag for both timed and automatic login.  This makes
	  configuring it nicer and easier to understand

	* gui/gdmlogin.c:  Add a clock, perhaps there should be a config
	  option about this

	* gui/gdmlogin.c, gui/gdmlanguages.[ch], gui/Makefile.am:  Add a
	  somewhat primitive (unfinished) framework for translating language
	  names.  Unfortunately names are hardcoded, though available
	  languages are still read from locale.alias.

Mon May 14 03:16:50 2001  George Lebl <jirka@5z.com>
