@@ -64,6 +64,8 @@ gboolean GdmAutomaticLoginEnable = FALSE;
 gchar *GdmConfigurator = NULL;
 gboolean GdmConfigAvailable = FALSE;
 gboolean GdmSystemMenu = FALSE;
+gboolean GdmBrowser = FALSE;
+gchar *GdmGlobalFaceDir = NULL;
 gint GdmXineramaScreen = 0;
 gchar *GdmGreeter = NULL;
 gchar *GdmChooser = NULL;
@@ -150,6 +152,8 @@ gdm_config_parse (void)
     GdmConfigurator = gnome_config_get_string (GDM_KEY_CONFIGURATOR);
     GdmConfigAvailable = gnome_config_get_bool (GDM_KEY_CONFIG_AVAILABLE);
     GdmSystemMenu = gnome_config_get_bool (GDM_KEY_SYSMENU);
+    GdmBrowser = gnome_config_get_bool (GDM_KEY_BROWSER);
+    GdmGlobalFaceDir = gnome_config_get_string (GDM_KEY_FACEDIR);
     GdmXineramaScreen = gnome_config_get_int (GDM_KEY_XINERAMASCREEN);
     GdmReboot = gnome_config_get_string (GDM_KEY_REBOOT);
     GdmRetryDelay = gnome_config_get_int (GDM_KEY_RETRYDELAY);
